# django-telegram-bot

./: README.md  pyproject.toml
django_telegram_bot/: admin.py  apps.py  aux.py  mock.py
django_telegram_bot/locale/ru_RU/LC_MESSAGES/: django.po
django_telegram_bot/models/: __init__.py  bot.py  message.py  tasks.py  user.py
django_telegram_bot/telegram_bot/: __init__.py  bot.py  conversation.py  ext.py
features/: broadcast.feature  environment.py  mitmmock_replay.py  telegram_bot.feature  user_interaction.feature
features/flows/: Bot start.mitmmock  Bot stop.mitmmock  Broadcast periodic.mitmmock  Broadcast.mitmmock  Conversation with keyboard.mitmmock  Conversation.mitmmock
features/steps/: bot_start.py  bot_stop.py  broadcast.py  conversation.py
test_env/: django_telegram_bot  manage.py  populate.py
test_env/django_telegram_bot_business_logic/: apps.py
test_env/django_telegram_bot_test/: asgi.py  settings.py  urls.py  wsgi.py
