[tool.poetry]
name = "django-telegram-bot"
version = "0.1.0"
description = "Wraps aroud python-telegram-bot for usage in Django"
authors = ["readysloth <readysloth@protonmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-telegram-bot = "^21.0.1"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
django-solo = "^2.2.0"
django-object-actions = "^4.2.0"


[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
behave-django = "^1.4.0"
mimesis = "^15.1.0"
factory-boy = "^3.3.0"
mitmmock = {git = "git@github.com:readysloth/mitmmock.git"}
remote-pdb = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
